Trying to fix the width and height on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,11 @@
 @use './base';
 @use './abstracts';
 
+html { height: 100%; }
+
 body {
-    width: 100%;
-    min-height: 100dvh;
+    width: 100vw;
+    height: inherit;
     color: map-get(
         abstracts.$color,
         neutral,
